# torch-image-binarization

./: CHANGELOG.md  README.md  binarize.py  compile.ipynb  compiled_kernel.py  main.py  optimizations.ipynb  pyproject.toml  requirements.txt  setup.py
data/: optimizations.ipynb
torch_image_binarization/: main.py  thresholding.py
